# msp430Cmake

./: CMakeLists.txt  main.c  msp430f2232.cmd  toolChain.cmake
